--- a/kitty/.config/kitty/nord.conf
+++ b/kitty/.config/kitty/nord.conf
@@ -3,7 +3,7 @@
 # - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
 # - https://github.com/arcticicestudio/nord-hyper
 
-foreground            #D8DEE9
+foreground            #FFFFFF
 background            #2E3440
 selection_foreground  #000000
 selection_background  #FFFACD
