feat: new hyprland style

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -226,7 +226,7 @@ bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, E, exec, hyprctl dispatch exit
 
 # Move focus with mainMod + arrow keys
