--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,6 +1,9 @@
-preload = ~/Pictures/wallpapers/9rmflv6slaxe1.png
+preload = ~/Pictures/wallpapers/adam.png
+preload = ~/Pictures/wallpapers/boat.webp
+preload = ~/Pictures/wallpapers/aishot-1589.jpg
+preload = ~/Pictures/wallpapers/snowy-trees.jpg
 
-wallpaper = DP-2,contain:~/Pictures/wallpapers/9rmflv6slaxe1.png
+wallpaper = DP-2,contain:~/Pictures/wallpapers/snowy-trees.jpg
 
 splash = false
 
