fix: waybar hyprland wezterm and wallpapers

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,3 +55,17 @@ run '~/.dotfiles/tmux/.tmux/plugins/tpm/tpm'
 # Clear restore flag when session ends
 set-hook -g session-closed 'run-shell "rm -f ~/.tmux/.restored"'
 
+# === Status bar style ===
+set -g status on
+set -g status-bg '#d88c5a'
+set -g status-fg black
+set -g status-style bg=#d88c5a,fg=black
+
+# === Window title colors ===
+set-window-option -g window-status-style bg=#d88c5a,fg=black
+set-window-option -g window-status-current-style bg=black,fg=#d88c5a
+
+# change left/right status text
+set -g status-left '#[bold]#S #[default]'
+set -g status-right '#[fg=black] %Y-%m-%d %H:%M #[default]'
+
