--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,9 +1,29 @@
-preload = ~/Pictures/wallpapers/adam.png
-preload = ~/Pictures/wallpapers/boat.webp
-preload = ~/Pictures/wallpapers/aishot-1589.jpg
-preload = ~/Pictures/wallpapers/snowy-trees.jpg
+# === Preload 5120x1440 ===
+preload = ~/.wallpapers/5120x1440/astronaut.png
+preload = ~/.wallpapers/5120x1440/berserk.png
+preload = ~/.wallpapers/5120x1440/desert.png
+preload = ~/.wallpapers/5120x1440/glitch.png
+preload = ~/.wallpapers/5120x1440/kingdom-come.png
+preload = ~/.wallpapers/5120x1440/mountain.png
+preload = ~/.wallpapers/5120x1440/pink-swirl.png
+preload = ~/.wallpapers/5120x1440/stacks-city.png
+preload = ~/.wallpapers/5120x1440/stacks.png
+preload = ~/.wallpapers/5120x1440/sun-god.png
 
-wallpaper = DP-2,contain:~/Pictures/wallpapers/snowy-trees.jpg
+# === Preload 2560x1440 ===
+preload = ~/.wallpapers/2560x1440/astronaut.png
+preload = ~/.wallpapers/2560x1440/berserk.png
+preload = ~/.wallpapers/2560x1440/desert.png
+preload = ~/.wallpapers/2560x1440/glitch.png
+preload = ~/.wallpapers/2560x1440/kingdom-come.png
+preload = ~/.wallpapers/2560x1440/mountain.png
+preload = ~/.wallpapers/2560x1440/pink-swirl.png
+preload = ~/.wallpapers/2560x1440/stacks-city.png
+preload = ~/.wallpapers/2560x1440/stacks.png
+preload = ~/.wallpapers/2560x1440/sun-god.png
+
+# === Active wallpaper ===
+wallpaper = DP-2,contain:~/.wallpapers/5120x1440/stacks-city.png
 
 splash = false
 
