--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,11 +1,10 @@
 // -*- mode: jsonc -*-
 {
     // "layer": "top", // Waybar at top layer
-    "position": "bottom",
+    "position": "top",
     "style": "~/.config/waybar/style.css",
     "reload_style_on_change": true,
     // "width": 1280, // Waybar width
-    "margin-bottom": 10,
     "spacing": 4, // Gaps between modules (4px)
     "modules-left": [
         "hyprland/workspaces",
@@ -133,17 +132,15 @@
         "format": "{}",
         "on-click": "pavucontrol"
     },
-
     "custom/power": {
         "format" : "⏻ ",
 		"tooltip": false,
 		"menu": "on-click",
 		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
 		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
+            "lock": "~/.config/waybar/scripts/lock.sh",
+            "reboot": "reboot",
+            "shutdown": "shutdown now"
+        }
     }
 }
