--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=DP-2,preferred,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = nautilus
-$menu = wofi --show drun --style ~/.config/wofi/style.css
+$menu = rofi -show drun -wayland
 
 
 #################
@@ -78,25 +78,19 @@ general {
 
     border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(d88c5aff) rgba(ef9f6eff) 45deg
-    col.inactive_border = rgba(3b4261aa)
+    # Border colors
+    col.active_border = rgba(cc7722ff) rgba(e6b84aff) 45deg  # muted pumpkin → golden yellow
+    col.inactive_border = rgba(665040aa)                     # brown-gray fizz
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 2              # less rounded, subtle
     rounding_power = 2
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -104,16 +98,14 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = rgba(120a07dd)  # match dark_bg with alpha
     }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
         passes = 1
-
-        vibrancy = 0.1696
+        vibrancy = 0.17
     }
 }
 
