fix: neovim and cleanup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,6 +48,8 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH $HOME/.dotfiles/tmux/.tmux/plugins
 
 # Declare plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavor 'mocha'
 
 # Load TPM from dotfiles
 run '~/.dotfiles/tmux/.tmux/plugins/tpm/tpm'
@@ -55,17 +57,27 @@ run '~/.dotfiles/tmux/.tmux/plugins/tpm/tpm'
 # Clear restore flag when session ends
 set-hook -g session-closed 'run-shell "rm -f ~/.tmux/.restored"'
 
-# === Status bar style ===
-set -g status on
-set -g status-bg '#d88c5a'
-set -g status-fg black
-set -g status-style bg=#d88c5a,fg=black
+set -g mouse on
+set -g default-terminal "tmux-256color"
 
-# === Window title colors ===
-set-window-option -g window-status-style bg=#d88c5a,fg=black
-set-window-option -g window-status-current-style bg=black,fg=#d88c5a
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
 
-# change left/right status text
-set -g status-left '#[bold]#S #[default]'
-set -g status-right '#[fg=black] %Y-%m-%d %H:%M #[default]'
+# Load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
 
