--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,8 +48,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH $HOME/.dotfiles/tmux/.tmux/plugins
 
 # Declare plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @catppuccin_flavor 'mocha'
+set -g @plugin 'Nybkox/tmux-kanagawa'
 
 # Load TPM from dotfiles
 run '~/.dotfiles/tmux/.tmux/plugins/tpm/tpm'
@@ -60,24 +59,7 @@ set-hook -g session-closed 'run-shell "rm -f ~/.tmux/.restored"'
 set -g mouse on
 set -g default-terminal "tmux-256color"
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-
-# Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
-
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-
-run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
-run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
+# Configure the kanagawa plugin
+set -g @kanagawa-theme 'dragon'
+set -g @kanagawa-ignore-window-colors true
 
