fix: rice update

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=DP-2,preferred,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = nautilus
-$menu = rofi -show drun -wayland
+$menu = rofi -show drun -theme ~/.config/rofi/config.rasi
 
 
 #################
@@ -49,9 +49,10 @@ $menu = rofi -show drun -wayland
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar & hyprpaper
+exec-once = waybar
 exec-once = hypridle
 exec-once = mpd
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -61,9 +62,9 @@ exec-once = mpd
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME,Tokyonight-Dark
-env = XCURSOR_THEME,Tokyonight-Dark
-env = QT_STYLE_OVERRIDE,kvantum
+
+# Qt apps should use qt6ct for theming
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
@@ -189,9 +190,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+#gestures {
+#    workspace_swipe = false
+#}
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
